--- a/resources/view/frontend/profile.html
+++ b/resources/view/frontend/profile.html
@@ -2,6 +2,34 @@
 
 {% block content %}
 <h1 class="container mt-4">
-  Welcome, Anthony!
+  Welcome, {{name}}!
+
+  <form action="{{ url_for('web.add_talent') }}" method="post">
+    <div class="form-group">
+        <label for="name">Name:</label>
+        <input type="text" class="form-control" id="name" name="name" required>
+    </div>
+    <div class="form-group">
+        <label for="background">Background:</label>
+        <input type="text" class="form-control" id="background" name="background">
+    </div>
+    <div class="form-group">
+        <label for="experience">Experience:</label>
+        <input type="text" class="form-control" id="experience" name="experience">
+    </div>
+    <div class="form-group">
+        <label for="education">Education:</label>
+        <input type="text" class="form-control" id="education" name="education">
+    </div>
+    <div class="form-group">
+        <label for="job_preference">Job Preference:</label>
+        <input type="text" class="form-control" id="job_preference" name="job_preference">
+    </div>
+    <div class="form-group">
+        <label for="availability">Availability:</label>
+        <input type="text" class="form-control" id="availability" name="availability">
+    </div>
+    <button type="submit" class="btn btn-primary my-2">Add Talent</button>
+</form>
 </h1>
 {% endblock %}
